<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity_common" >

    <View style="@style/view_space" />

    <ImageView
        android:id="@+id/img_sys_login_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_blank"
        android:src="@drawable/ic_logo_108" />

    <View style="@style/view_space" />

    <View style="@style/view_space" />

    <EditText
        android:id="@+id/et_sys_login_account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/login_username_hint"
        android:inputType="text"
        android:paddingLeft="8dp"
        android:singleLine="true" />

    <View style="@style/view_space" />

    <EditText
        android:id="@+id/et_sys_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:paddingLeft="8dp" />

    <View style="@style/view_space" />

    <Button
        android:id="@+id/btn_sys_login_login"
        style="@style/btn_common"
        android:layout_width="match_parent"
        android:text="@string/app_login" />

    <View style="@style/view_space" />

    <Button
        android:id="@+id/btn_sys_login_test"
        style="@style/btn_common"
        android:layout_width="match_parent"
        android:text="@string/app_test" />

    <View style="@style/view_space" />

    <TextView
        android:id="@+id/tv_sys_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/login_register_link"
        android:textSize="16sp" />

</LinearLayout>