<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_mark_create"
        android:orderInCategory="10"
        android:showAsAction="ifRoom|withText"
        android:title="@string/app_create">
    </item>
    <item
        android:id="@+id/item_more"
        android:orderInCategory="10"
        android:showAsAction="ifRoom|withText"
        android:textSize="16sp"
        android:title="@string/item_more_text">
        <menu>

            <!--
            <item
                android:id="@+id/item_main_about"
                android:icon="@drawable/gplus_32"
                android:orderInCategory="10"
                android:showAsAction="ifRoom|withText"
                android:title="@string/item_sys_about_text">
            </item>
            <item
                android:id="@+id/item_main_share"
                android:icon="@drawable/ico_cloud_upload"
                android:orderInCategory="10"
                android:showAsAction="ifRoom|withText"
                android:title="@string/item_sys_share_text">
            </item>
            -->
            <item
                android:id="@+id/item_mark_his"
                android:icon="@drawable/mark_32"
                android:orderInCategory="100"
                android:showAsAction="ifRoom|withText"
                android:title="@string/item_mark_his_text"/>
            <item
                android:id="@+id/item_sys_version"
                android:icon="@drawable/ico_question_sign"
                android:orderInCategory="100"
                android:showAsAction="ifRoom|withText"
                android:title="@string/item_sys_version_text"/>
            <item
                android:id="@+id/item_sys_quit"
                android:icon="@drawable/ico_off"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/item_sys_quit_text"/>
            
        </menu>
    </item>

</menu>